--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
     <section id="home">
         <div class="title">
-            <h1 class="title_h1">I'm Ana <span id="name">Steel</span></h1>
+            <h1 class="title_h1">I'm Anna <span id="name">Steel</span></h1>
             <p class="title_p">This is my official portfolio website to describe all <br>Details and work experience in Web Development</p>
             <a class="download" href="https://drive.google.com/file/d/13MfZJ2UDN5C0CtaZbp0vBVdqJiT38S7y/view?usp=drive_link" target="_blank" download>DOWNLOAD CV</a>
         </div>
